# uplift

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Leptos.toml  README.md  docker-compose.yml
.sqlx/: query-00da00f6f5e7d9b353f396989f962dc24a4ef8e074eafdd779706aeaad1b242a.json  query-20a09a906b596c68f8527b19db50b3792317223a02afc76420a96cc9398de1b0.json  query-4484117f51903087bf0a71d7d305c6deecc70a68c6fe07863934c457a89114de.json  query-586978912fe58d10b1d0fb81fd6a67ba99c3ae4af8cec02bf8efe7cdcbf94029.json  query-5d523b54ce0b782c9dbc0d635fc53b98d6e291373d5e4135f39da99cdcbeecb2.json  query-6cadc930c56085c9768bb0ca64fa511e0d649151ddd539f87ef198f6e093455b.json  query-74a70bd9d70c1e8e7ce9565f88268b2c6375bcaf92dc2320534c73011ab5fea4.json  query-7b0389d38dfc559a58fe2e9a6daba8c0fd6a7549c95fddf79fa63107afda088b.json  query-7cecf087650abbd156ad0d93d3169f07d6d70d80d25f896192df81392b0f9de7.json  query-7f33885756d55401a795015a71d318147eacecf0cced4e4e8c53d612576ee753.json  query-824b286f84da55472eb3f6e2352312ad4b1fe79e530819fa629b4922676e81c0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-87a310027a579e25f7f1898dcd0ebe27ba2abfe68fa5cdc8add7931338a58bb9.json  query-88217060405ea862a5c5758f0361667136cc0046655913a3a1298cd211f644d1.json  query-8aeb4514bcfc8ffcec69d3ccf44f968f1bbefc62148b1c018fc9fbc04eabc234.json  query-9e1df7df4d00134b12b427ccda683cbceda1fe198ff3da8756e56134c4cc8dcb.json  query-a15c08936d898eb7af9d57700d224e3992b863e93430fa01219d6c65bb9047ad.json  query-b0e7f95880f7caeef102225c313dd94481f4cd9caaf2a5719cf69de7adb663e5.json  query-b70317ca36372ae9803b15c675439062654e708b88c838cef53e642b16963bd3.json  query-b8189c48108d7d660130578eb1b08013b2a1690c233d8e935bf256946c256f6e.json  query-bb9854c8723f930880f19cf427c2a8eb9e8e09037d94e3b6fcb85be1c031b9f0.json  query-bc20f4029ad232fa8eb87968a962f3a1083d60df3810d38c441da131a8032bef.json  query-c5143e0200c63ef14b93a92e4759bca32bed7b1e2e0aafe0ae408f551fedb1c4.json  query-d598af955d1b5c198537a15ee3e7f4d095b058cabc200ff846d04f5b5ad2de31.json  query-e277a0d5c794882d0fd37f01bca495f1a80063766b68c776905ff63c53f42c8c.json  query-e79ae138ae2c909cc21279537fbff19c452994f22b4c41da82a657ddaf86396e.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-f79a6da60e79582e87cfc5cfdb74fc76924250541776c41a80848b3fdd7205ec.json  query-f8089441675144971854aee93de2aeec7fcfe6bc744f3fae040be99ab86ef498.json  query-fe89fe2d05799853181c8a7fdad9b0ae787f6049788bd16e58cf050beccfafb5.json
crates/uplift_api/: Cargo.toml
crates/uplift_api/src/: error.rs  main.rs  state.rs
crates/uplift_api/src/middleware/: auth.rs  logging.rs
crates/uplift_api/src/routes/: analyses.rs  auth.rs  health.rs  mod.rs  properties.rs  stripe_webhooks.rs
crates/uplift_connectors/: Cargo.toml
crates/uplift_connectors/src/: error.rs  lib.rs  normalize.rs
crates/uplift_connectors/src/google/: analytics.rs  auth.rs  mod.rs  search_console.rs
crates/uplift_core/: Cargo.toml
crates/uplift_core/src/: error.rs  lib.rs  narrative.rs
crates/uplift_core/src/impact/: analysis.rs  mod.rs  report.rs
crates/uplift_core/src/model/: its.rs  mod.rs
crates/uplift_core/src/timeseries/: mod.rs  series.rs  transform.rs
crates/uplift_db/: Cargo.toml
crates/uplift_db/migrations/: 20260516074553_organizations_users.sql  20260516074558_sessions.sql  20260516074603_subscriptions.sql  20260516074608_google_connections.sql  20260516074613_properties.sql  20260516074618_timeseries.sql  20260516074623_analyses.sql
crates/uplift_db/src/: crypto.rs  error.rs  lib.rs  pool.rs
crates/uplift_db/src/repositories/: analyses.rs  connections.rs  mod.rs  organizations.rs  properties.rs  sessions.rs  subscriptions.rs  timeseries.rs  users.rs
crates/uplift_jobs/: Cargo.toml
crates/uplift_jobs/src/: error.rs  fetch_timeseries.rs  lib.rs  refresh_tokens.rs  run_analysis.rs  send_report.rs
crates/uplift_web/: Cargo.toml
crates/uplift_web/src/: lib.rs  server_utils.rs
crates/uplift_web/src/components/: impact_chart.rs  mod.rs  nav.rs  shell.rs  stat_card.rs
crates/uplift_web/src/pages/: analyses.rs  analysis_result.rs  dashboard.rs  login.rs  mod.rs  new_analysis.rs  settings.rs
