[workspace]
resolver = "2"
members = [
    "crates/uplift_core",
    "crates/uplift_connectors",
    "crates/uplift_db",
    "crates/uplift_jobs",
    "crates/uplift_api",
    "crates/uplift_web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kimotho Karani"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# Frontend
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Background jobs
# In apalis 0.7, postgres support moved to the separate apalis-sql crate
apalis = "0.7"
apalis-sql = { version = "0.7", features = ["postgres", "tokio-comp"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auth
oauth2 = "4"
jsonwebtoken = "9"

# Payments
# "stripe" on crates.io is a dead crate (last published 2015); async-stripe is the maintained library
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Math/statistics
nalgebra = "0.33"
statrs = "0.17"
ndarray = "0.16"
rand = "0.9"
rand_distr = "0.6"
rayon = "1"

# Crypto
aes-gcm = "0.10"
base64 = "0.22"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder"] }

# PDF (chromiumoxide defaults to async-std; opt into tokio explicitly)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sentry = "0.34"

# Config
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
proptest = "1"
# testcontainers is re-exported by testcontainers-modules, no need to list it separately
testcontainers-modules = { version = "0.15", features = ["postgres"] }
testcontainers = "0.27"
httpmock = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
