[package]
name = "uplift_connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
uplift_core = { path = "../uplift_core" }
tokio = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
