[package]
name = "uplift_db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
uplift_core = { path = "../uplift_core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aes-gcm = {workspace = true}
base64 = {workspace = true}

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
