[package]
name = "uplift_web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uplift_core = { path = "../uplift_core" }
uplift_db   = { path = "../uplift_db" }
uplift_jobs = { path = "../uplift_jobs" }
leptos        = { workspace = true }
leptos_axum   = { workspace = true }
leptos_meta   = { workspace = true }
leptos_router = { workspace = true }
axum    = { workspace = true }
sqlx    = { workspace = true }
tokio   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }